--- a/index.html
+++ b/index.html
@@ -23,5 +23,48 @@
     </ul>
   </nav>
 </header>
+
+<!-- MAIN-CONTENT -->
+<main>
+<h1>Photo gallery</h1>
+<hr>
+
+<section>
+<h2>Top photos</h2>
+<ul>
+<li>
+  <img src="https://picsum.photos/250?random=1" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=2" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=3" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=4" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=5" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=6" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=7" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=8" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=9" alt="rasm" width="250" height="250">
+
+<li>
+  <img src="https://picsum.photos/250?random=10" alt="rasm" width="250" height="250">
+
+</ul>
+
+</section>
+</main>
 </body>
 </html>
