--- a/index.html
+++ b/index.html
@@ -66,5 +66,15 @@
 
 </section>
 </main>
+<!-- site footer -->
+<footer>
+<ul>
+  <li><a href="#" target="_blank">Telegram</a></li>
+  <li><a href="#" target="_blank">Fecebook</a></li>
+  <li><a href="#" target="_blank">Twitter</a></li>
+  <li><a href="#" target="_blank">TikTok</a></li>
+</ul>
+<p>Copyright 2021 MJB</p>
+</footer>
 </body>
 </html>
